# inteligencia-computacional

./: .gitignore  CMakeLists.txt  config.h.in  main.cpp
include/: Instance.h  Job.h  Management.h  Random.h
instance-generator/: CMakeLists.txt  README.md
instance-generator/src/: main.cpp
instances/: N100_P10.txt  N100_P10_20_S10_15_A20_40.txt  N100_P10_20_S10_15_A40_60.txt  N100_P10_20_S5_10_A20_40.txt  N100_P10_20_S5_10_A40_60.txt  N100_P20_30_S10_15_A20_40.txt  N100_P20_30_S10_15_A40_60.txt  N100_P20_30_S5_10_A20_40.txt  N100_P20_30_S5_10_A40_60.txt  N10_P10.txt  N10_P10_20_S10_15_A20_40.txt  N10_P10_20_S10_15_A40_60.txt  N10_P10_20_S5_10_A20_40.txt  N10_P10_20_S5_10_A40_60.txt  N10_P20_30_S10_15_A20_40.txt  N10_P20_30_S10_15_A40_60.txt  N10_P20_30_S5_10_A20_40.txt  N10_P20_30_S5_10_A40_60.txt  N15_P10_20_S10_15_A20_40.txt  N15_P10_20_S10_15_A40_60.txt  N15_P10_20_S5_10_A20_40.txt  N15_P10_20_S5_10_A40_60.txt  N15_P20_30_S10_15_A20_40.txt  N15_P20_30_S10_15_A40_60.txt  N15_P20_30_S5_10_A20_40.txt  N15_P20_30_S5_10_A40_60.txt  N20_P10_20_S10_15_A20_40.txt  N20_P10_20_S10_15_A40_60.txt  N20_P10_20_S5_10_A20_40.txt  N20_P10_20_S5_10_A40_60.txt  N20_P20_30_S10_15_A20_40.txt  N20_P20_30_S10_15_A40_60.txt  N20_P20_30_S5_10_A20_40.txt  N20_P20_30_S5_10_A40_60.txt  N25_P10_20_S10_15_A20_40.txt  N25_P10_20_S10_15_A40_60.txt  N25_P10_20_S5_10_A20_40.txt  N25_P10_20_S5_10_A40_60.txt  N25_P20_30_S10_15_A20_40.txt  N25_P20_30_S10_15_A40_60.txt  (+21 more)
saidas/: N100_P10.txt  N100_P10_20_S10_15_A20_40.txt  N100_P10_20_S10_15_A40_60.txt  N100_P10_20_S5_10_A20_40.txt  N100_P10_20_S5_10_A40_60.txt  N100_P20_30_S10_15_A20_40.txt  N100_P20_30_S10_15_A40_60.txt  N100_P20_30_S5_10_A20_40.txt  (+49 more)
(+10 files in other folders)
